--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,10 +3,12 @@
 
     <dimen name="default_text_size">20sp</dimen>
 
-    <dimen name="clipRectRight">90dp</dimen>
-    <dimen name="clipRectBottom">90dp</dimen>
+    <dimen name="clipRectRight">400dp</dimen>
+    <dimen name="clipRectBottom">160dp</dimen>
     <dimen name="clipRectTop">0dp</dimen>
     <dimen name="clipRectLeft">0dp</dimen>
 
-    <dimen name="circleRadius">30dp</dimen>
+    <dimen name="circleRadius">60dp</dimen>
+
+    <dimen name="rectInset">8dp</dimen>
 </resources>
