--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#07C2AA</color>
     <color name="colorPrimaryDark">#004349</color>
+    <color name="colorFailed">#F00</color>
     <color name="colorAccent">#F9A825</color>
     <color name="white">#FFFFFF</color>
     <color name="colorDownloadIcon">#824AF1</color>
