--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,12 +3,15 @@
 
     <dimen name="default_text_size">20sp</dimen>
 
-    <dimen name="clipRectRight">400dp</dimen>
-    <dimen name="clipRectBottom">160dp</dimen>
-    <dimen name="clipRectTop">0dp</dimen>
+    <dimen name="clipRectRight">200dp</dimen>
+    <dimen name="clipRectBottom">165dp</dimen>
+    <dimen name="clipRectTop">70dp</dimen>
     <dimen name="clipRectLeft">0dp</dimen>
 
     <dimen name="circleRadius">60dp</dimen>
 
-    <dimen name="rectInset">8dp</dimen>
+    <dimen name="logoMargin">25dp</dimen>
+    <dimen name="logoPadding">8dp</dimen>
+
+    <dimen name="rectInset">80dp</dimen>
 </resources>
