fixing animations and custom attributes

--- a/app/src/main/res/xml/content_detail_scene.xml
+++ b/app/src/main/res/xml/content_detail_scene.xml
@@ -4,19 +4,70 @@
 
     <ConstraintSet android:id="@+id/start">
         <Constraint android:id="@+id/text_status" />
+        <Constraint android:id="@id/ok_button" />
+
+        <Constraint
+            android:id="@+id/label_filename"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <Constraint
+            android:id="@+id/label_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/label_filename" />
+
+        <Constraint
+            android:id="@+id/text_filename" />
+
+        <Constraint
+            android:id="@+id/text_status" />
+
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint android:id="@id/text_status" />
+        <Constraint android:id="@id/ok_button" />
+
+        <Constraint
+            android:id="@+id/label_filename"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Constraint
+            android:id="@+id/text_filename" />
+
     </ConstraintSet>
 
     <Transition
         app:autoTransition="animateToEnd"
         app:constraintSetEnd="@id/end"
         app:constraintSetStart="@+id/start"
-        app:duration="4000">
+        app:duration="2000">
 
         <KeyFrameSet>
+
+            <KeyAttribute
+                android:alpha="0.0"
+                app:framePosition="0"
+                app:motionTarget="@id/text_filename"/>
+
+            <KeyAttribute
+                android:alpha="1.0"
+                app:framePosition="100"
+                app:motionTarget="@id/text_filename"/>
+
             <KeyAttribute
                 android:alpha="0.0"
                 app:framePosition="0"
@@ -26,6 +77,16 @@
                 android:alpha="1.0"
                 app:framePosition="100"
                 app:motionTarget="@id/text_status"/>
+
+            <KeyAttribute
+                android:alpha="0.0"
+                app:framePosition="0"
+                app:motionTarget="@id/ok_button"/>
+
+            <KeyAttribute
+                android:alpha="1.0"
+                app:framePosition="100"
+                app:motionTarget="@id/ok_button"/>
         </KeyFrameSet>
 
     </Transition>
