--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -11,7 +11,7 @@
     app:layoutDescription="@xml/content_detail_scene">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/label_filename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -21,14 +21,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/label_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:text="@string/text_status"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/label_filename" />
 
     <TextView
         android:id="@+id/text_filename"
@@ -39,9 +39,9 @@
         android:lines="3"
         android:text="TextView"
         android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
+        app:layout_constraintBaseline_toBaselineOf="@+id/label_filename"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView" />
+        app:layout_constraintStart_toEndOf="@+id/label_filename" />
 
     <TextView
         android:id="@+id/text_status"
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
+        app:layout_constraintBaseline_toBaselineOf="@+id/label_status"
         app:layout_constraintStart_toStartOf="@+id/text_filename" />
 
     <Button
